Refactoring and bug fixes
- Fixed bug where first result would be skipped if auto focus first was not selected
- Fixed array index out of bounds exception after last result
- Added back navigation for footer links. Don't highlight footer links
- Pulled addResultHighlight, findContainer back into their own methods
- Removed focus/text property separation. Selector guarantees they'll always be the same
- Style updates
- Added safeguard to detect outdated selectors
- Pulled all selectors out into their own properties

--- a/css/highlight.css
+++ b/css/highlight.css
@@ -1,21 +1,29 @@
-body.useFancyHighlight #res .activeSearchResultContainer {
-  border-left: 3px solid #2586fc !important;
-  padding-left: 8px !important;
-  margin-left: -11px !important;
+body.useFancyHighlight .activeSearchResultContainer a {
+  outline: 0;
 }
 
-body.useFancyHighlight #botstuff .activeSearchResultContainer img {
+body.useFancyHighlight .activeSearchResultContainer {
+  border-left: 3px solid #2586fc !important;
+  transform: translate(-3px, 0) !important;
+}
+
+body.useFancyHighlight div.g.activeSearchResultContainer,
+body.useFancyHighlight li.ads-ad li.activeSearchResultContainer,
+body.useFancyHighlight div.gs_r.activeSearchResultContainer {
+  padding-left: 8px;
+  margin-left: -11px;
+  transform: none !important;
+}
+
+body.useFancyHighlight .activeSearchResultContainer img {
   border-top: 3px solid #2586fc !important;
 }
 
-body.useSimpleHighlight .activeSearchResultText {
-  white-space: nowrap;
-}
-
-body.useSimpleHighlight .activeSearchResultText:before {
+body.useSimpleHighlight .activeSearchResult:before {
   content: '\25BA \00A0';
 }
 
-body.useHighlight .activeSearchResult {
+body.useSimpleHighlight .activeSearchResult {
+  white-space: nowrap;
   outline: 0;
 }
